<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MedicineAlert</string>
    <string name="action_settings">Settings</string>
    <string name="bemVindo">Bem Vindo!</string>
    <string name="addRemedio">Cadastrar Remédio</string>
    <string name="searchRemedio">Consultar Remédio</string>
    <string name="title_activity_cadastra_remedio">Cadastra Remédio</string>
    <string name="title_activity_consulta_horarios_remedios">Consulta Remédios</string>
    <string name="usuario">Usuário:</string>
    <string name="nomeRemedio">Nome do remédio:</string>
    <string name="dosagemRemedio">Dosagem:</string>
    <string name="qtdeDias">Duração:</string>
    <string name="qtVezesDias">Quantas vezes ao dia:</string>
    <string name="dtHoraInicio">Data e hora de inicio:</string>
    <string name="ml">ml</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_dt_time">DtTimeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="Data">Data: </string>
    <string name="Hora">Hora: </string>
    <string name="insereHoraData">Clique aqui</string>
    <string name="TipoDosagemComp">compimido</string>
    <string name="TipoDosagemLiq">líquido</string>
    <string name="cadastrarRemedio">Cadastrar</string>
    <string name="consultarRemedio">Consultar</string>
    <string name="title_activity_data">Data do Remédio</string>
    <string name="title_activity_hora">Hora do Remédio</string>

</resources>
