<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CadastraRemedioActivity" >

    <TextView
        android:id="@+id/txtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/usuario"
        android:textSize="7pt" />

    <EditText
        android:id="@+id/edtDosagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edtVezesDia"
        android:layout_alignBottom="@+id/edtVezesDia"
        android:layout_toLeftOf="@+id/edtQdtDias"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/edtVezesDia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edtQdtDias"
        android:layout_alignBottom="@+id/edtQdtDias"
        android:layout_alignLeft="@+id/txtVezesDia"
        android:layout_alignRight="@+id/txtVezesDia"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edtNomeRemedio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/NomeRemedio"
        android:layout_alignRight="@+id/edtUsuario"
        android:layout_below="@+id/NomeRemedio"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtUsuario"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/edtQdtDias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/NomeRemedio"
        android:layout_below="@+id/txtQtDiasRemedio"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnCancelar"
        android:layout_alignBottom="@+id/btnCancelar"
        android:layout_alignLeft="@+id/edtVezesDia"
        android:layout_alignRight="@+id/edtVezesDia"
        android:text="@string/salvar" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/edtQdtDias"
        android:text="@string/cancelar" />

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtQdtDias"
        android:layout_below="@+id/txtDosagemRemedio"
        android:text="@string/TipoDosagemComp" />

    <TextView
        android:id="@+id/txtVezesDia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtVezesDia"
        android:layout_toRightOf="@+id/txtDataInicio"
        android:text="@string/qtVezesDias"
        android:textSize="7pt" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioButton1"
        android:layout_alignRight="@+id/edtQdtDias"
        android:layout_below="@+id/radioButton1"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/NomeRemedio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtUsuario"
        android:layout_below="@+id/edtUsuario"
        android:text="@string/nomeRemedio"
        android:textSize="7pt" />

    <TextView
        android:id="@+id/txtQtDiasRemedio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtNomeRemedio"
        android:layout_below="@+id/edtNomeRemedio"
        android:text="@string/qtdeDias"
        android:textSize="7pt" />

    <TextView
        android:id="@+id/txtDosagemRemedio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtQdtDias"
        android:layout_below="@+id/edtQdtDias"
        android:text="@string/dosagemRemedio"
        android:textSize="7pt" />

    <TextView
        android:id="@+id/txtDataInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:text="@string/dtTimeInicio"
        android:textSize="7pt" />

    <Button
        android:id="@+id/btDtTmInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtDataInicio"
        android:layout_below="@+id/txtDataInicio"
        android:layout_marginTop="15dp"
        android:text="@string/insereHoraData" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText1"
        android:layout_toRightOf="@+id/editText1"
        android:text="@string/TipoDosagemLiq" />

</RelativeLayout>